# oyo

./: .gitignore  Cargo.toml  PROFILING.md  README.md  flake.nix  package.json  plan.txt
.github/workflows/: ci.yml  release.yml
crates/oyo/: Cargo.toml
crates/oyo-core/: Cargo.toml
crates/oyo-core/benches/: perf.rs
crates/oyo-core/src/: diff.rs  git.rs  lib.rs  multi.rs  step.rs
crates/oyo-core/tests/: perf_guard.rs
crates/oyo/src/: app.rs  blame.rs  color.rs  config.rs  dashboard.rs  input.rs  keybindings.rs  main.rs  syntax.rs  test_utils.rs  time_format.rs  ui.rs
crates/oyo/src/app/: blame.rs  diff_worker.rs  file_panel.rs  files.rs  mod.rs  navigation.rs  palette.rs  playback.rs  review.rs  search.rs  syntax.rs  tests.rs  types.rs  utils.rs
crates/oyo/src/views/: blame.rs  evolution.rs  mod.rs  side_by_side.rs  single_pane.rs  split.rs  tests.rs  unified_pane.rs
crates/oyo/themes/: aura.json  ayu.json  catppuccin-frappe.json  catppuccin-macchiato.json  catppuccin.json  cobalt2.json  cursor.json  dracula.json  everforest.json  flexoki.json  github.json  gruvbox.json  kanagawa.json  lucent-orng.json  material.json  matrix.json  mercury.json  monokai.json  nightowl.json  nord.json  one-dark.json  opencode.json  orng.json  palenight.json  rosepine.json  schema.json  solarized.json  synthwave84.json  tokyonight.json  vercel.json  vesper.json  zenburn.json
docs/: DEBUG.md  DIFF_PREVIEWS.md  DIFF_VIEWER.md  KEYBINDINGS.md  PERF.md  THEME.md
lib/: platform.js  run.js
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
scripts/: sync-npm-version.cjs
