[package]
name = "oyo-core"
version.workspace = true
edition.workspace = true
description = "Core diff engine for oyo - step-through diff viewer"
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["diff", "git", "viewer"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
imara-diff = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "perf"
harness = false
