[package]
name = "oyo"
version.workspace = true
edition.workspace = true
description = "CLI TUI for oyo - Step-through diff viewer"
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["diff", "tui", "git", "cli", "viewer"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "oy"
path = "src/main.rs"

[dependencies]
oyo-core = { path = "../oyo-core", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true, features = ["use-dev-tty"] }
clap = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
syntect = "5.3"
two-face = "0.5.0-rc1"
regex = { workspace = true }
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }
time = { workspace = true }
